# cgol-tui-rs

./: Cargo.toml  LICENSE_APACHE  LICENSE_MIT
.github/workflows/: check-build.yml
src/: app.rs  main.rs
src/app/: cell.rs  ui.rs
