[package]
name = "cgol-tui"
version = "0.6.9"
authors = ["Jeromos Kovacs <iitsnotme214@proton.me>"]
edition = "2024"
description = "Conway's Game of Life implementation with a TUI"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cgol-tui"
repository = "https://github.com/jarjk/cgol-tui-rs"
keywords = ["conway", "game-of-life", "tui"]
categories = ["games"]

[dependencies]
fastrand = "2.3.0"
ratatui = { version = "0.30.0-beta.0", default-features = false }
ratatui-manoterm = { git = "https://codeberg.org/jark/manoterm", branch = "ratatui-backend", version = "0.1.0" }
